--- a/index.html
+++ b/index.html
@@ -26,8 +26,14 @@
             <li>title назвать - List lessons</li>
             <li>сделать заголовок "h2" - текст на свое усмотрение <a href="https://webref.ru/html/h2">Шпаргалка тут</a></li>
             <li>сделать 3 абзаца по 60слов лорем - <a href="https://webref.ru/html/p">Шпаргалка тут</a> </li>
-            <li>Изучить <a href="https://webref.ru/html/ul">ТУТ !!!</a> </li>
-            <li>Создать 6 строчек списком в твоем проэкти - набор слов по своему усмотрению</li>
+            <li>Изучить <a href="https://webref.ru/html/ul">ТУТ !!!</a>
+            <ul>
+                <li>Создать 6 строчек списком "li"- набор слов по своему усмотрению</li>
+            </ul></li>
+            <li>Изучить <a href="https://webref.ru/html/ol">ТУТ !!!</a>
+            <ul>
+                <li>Создать 6 нумерованных строчек по уроку выше</li>
+            </ul></li>
             <li>всё это залить по сегоднешнему примеру на репу с названием list</li>
             <li>ссылку на репу отправить мне в телеге</li>
         </ul>
