--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <div class="wrapper">
         <h2>Задачи</h2>
         <ul>
-            <li>Создать проэкт/папку под именем - "list"</li>
+            <li>Создать локальный проэкт/папку в Vscode под именем - "list"</li>
             <li>Создать index.html</li>
             <li>Создать файл стилей мейн в папке цсс</li>
-            <li>привязать к индексу</li>
+            <li>привязать к index</li>
+            <li>title назвать - List lessons</li>
+            <li>Подсказка по <a href="https://webref.ru/html/title">TITLE</a></li>
             <li>сделать обертку: точка фраппер</li>
             <li>в файле стилей дать селектор фраппер с такими свойствами 
                 <ol>
@@ -23,7 +25,6 @@
                     <li>max-width: 980px;</li>
                 </ol>
             </li>
-            <li>title назвать - List lessons</li>
             <li>сделать заголовок "h2" - текст на свое усмотрение <a href="https://webref.ru/html/h2">Шпаргалка тут</a></li>
             <li>сделать 3 абзаца по 60слов лорем - <a href="https://webref.ru/html/p">Шпаргалка тут</a> </li>
             <li>Изучить <a href="https://webref.ru/html/ul">ТУТ !!!</a>
@@ -34,7 +35,18 @@
             <ul>
                 <li>Создать 6 нумерованных строчек по уроку выше</li>
             </ul></li>
-            <li>всё это залить по сегоднешнему примеру на репу с названием list</li>
+            <li>всё это залить по сегоднешнему <strong>UPD/Вчерашнему</strong> примеру на репу с названием list
+                <ol>
+                    <li>Создать репу с именем <span class="red">List</span></li>
+                    <li class="red">cd list </li>
+                    <li>git init</li>
+                    <li>git branch -M main</li>
+                    <li>git remote add origin https://github.com/amontear/List.git  //Линк посмотришь после создания New Repository я написал его условно. может отличаться</li>
+                    <li>git add .</li>
+                    <li>git commit -m "v.1 List + Css"</li>
+                    <li>git push -u origin main</li>
+                </ol>
+            </li>
             <li>ссылку на репу отправить мне в телеге</li>
         </ul>
         <h2>Желаю удачи</h2>
