--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             <li>Создать index.html</li>
             <li>Создать файл стилей мейн в папке цсс</li>
             <li>привязать к index</li>
+            <li>Подсказка <a href="https://webref.ru/html/link/rel">ТУТ</a>
+                <ul>
+                    <li> link rel="stylesheet" href="твой путь к мейн в цсс" </li>
+                </ul></li>
             <li>title назвать - List lessons</li>
             <li>Подсказка по <a href="https://webref.ru/html/title">TITLE</a></li>
             <li>сделать обертку: точка фраппер</li>
